# anyllm-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TASKS.md  repomix-output.xml
.github/workflows/: ci.yml  nightly.yml
assets/: model_pricing.json
crates/batch_engine/: Cargo.toml
crates/batch_engine/src/: db.rs  engine.rs  error.rs  file_store.rs  job.rs  lib.rs  validation.rs
crates/batch_engine/src/queue/: mod.rs  sqlite.rs
crates/batch_engine/src/webhook/: dispatcher.rs  mod.rs  sqlite.rs
crates/client/: Cargo.toml
crates/client/examples/: basic.rs  streaming.rs  tools.rs
crates/client/src/: client.rs  error.rs  http.rs  lib.rs  rate_limit.rs  retry.rs  sse.rs  streaming.rs  tools.rs
crates/proxy/: Cargo.toml
crates/proxy/admin-ui/: index.html
crates/proxy/src/: callbacks.rs  config.rs  lib.rs  main.rs  otel.rs  ratelimit.rs
crates/proxy/src/admin/: auth.rs  db.rs  keys.rs  mod.rs  routes.rs  spend.rs  state.rs  ws.rs
crates/proxy/src/admin/routes/: audit.rs  config.rs  keys.rs  logs.rs  mcp.rs  mod.rs  models.rs
crates/proxy/src/backend/: anthropic_client.rs  bedrock_client.rs  gemini_client.rs  mod.rs  openai_client.rs
crates/proxy/src/batch/: anthropic_batch.rs  db.rs  mod.rs  openai_batch_client.rs  routes.rs
crates/proxy/src/cache/: memory.rs  mod.rs  redis.rs  semantic.rs
crates/proxy/src/config/: env_aliases.rs  litellm.rs  mod.rs  model_router.rs  simple.rs  tls.rs  url_validation.rs
crates/proxy/src/cost/: db.rs  mod.rs
crates/proxy/src/fallback/: config.rs  mod.rs
crates/proxy/src/integrations/: langfuse.rs  mod.rs
crates/proxy/src/metrics/: mod.rs
crates/proxy/src/server/: audio.rs  bedrock_passthrough.rs  chat_completions.rs  gemini_native.rs  images.rs  middleware.rs  mod.rs  oidc.rs  passthrough.rs  policy.rs  routes.rs  sse.rs  state.rs  streaming.rs  token_counting.rs
crates/proxy/src/tools/: execution.rs  mcp.rs  mod.rs  policy.rs  registry.rs  trace.rs
crates/proxy/src/tools/builtin/: bash.rs  mod.rs  read_file.rs
crates/proxy/tests/: audio_image.rs  batch_api.rs  body_logging.rs  chat_completions.rs  compatibility.rs  embeddings.rs  error_fixtures.rs  fallback.rs  health.rs  live_api.rs  live_azure.rs  live_bedrock.rs  live_responses.rs  multi_backend.rs  shutdown.rs  simple_config.rs  streaming_tool_loop.rs  tool_execution.rs  virtual_keys.rs
crates/proxy/tests/fixtures/tls/: test-ca.pem  test-client.p12
crates/translator/: Cargo.toml  README.md
crates/translator/examples/: reverse_translation.rs  translate_request.rs
crates/translator/src/: config.rs  error.rs  lib.rs  translate.rs
crates/translator/src/anthropic/: batch.rs  errors.rs  messages.rs  mod.rs  streaming.rs
crates/translator/src/gemini/: errors.rs  generate_content.rs  mod.rs  request.rs  response.rs  tools.rs
crates/translator/src/mapping/: batch_map.rs  errors_map.rs  gemini_message_map.rs  gemini_schema_map.rs  gemini_streaming_map.rs  message_map.rs  mod.rs  responses_message_map.rs  responses_streaming_map.rs  reverse_message_map.rs  reverse_streaming_map.rs  streaming_map.rs  tools_map.rs  usage_map.rs  warnings.rs
crates/translator/src/middleware/: client.rs  handler.rs  mod.rs
crates/translator/src/openai/: chat_completions.rs  errors.rs  mod.rs  responses.rs  streaming.rs
crates/translator/src/util/: ids.rs  json.rs  mod.rs  redact.rs
crates/translator/tests/: golden_fixtures.rs  library_usage.rs  middleware_integration.rs
docs/: COMPARISON_LITELLM.md  ENV.md  api-diffs-anthropic.md  api-diffs-openai.md  compatibility-contract.md  compatibility.md  dependencies.md  field-mapping.md  file-handling-diffs.md  final-audit.md  gemini-api-diffs.md  library-integration.md  openai-spec-condensed.yaml  proxy-architecture.md  security-audit.md  streaming-diffs.md  tool-calling-diffs.md
docs/superpowers/plans/: 2026-03-22-phase22-graceful-shutdown-ratelimit-fixtures-logging.md  2026-03-27-admin-ui-overhaul.md  2026-03-27-phase1-correctness-and-trust.md  2026-03-27-phase2-operator-value.md  2026-03-27-security-hardening.md  2026-03-28-security-audit-all-fixes.md  2026-03-28-security-fixes.md  2026-03-29-security-audit-fixes.md  2026-03-30-batch-engine-phase1.md  2026-03-30-model-routing-ux.md  2026-03-30-pre-1.0-audit-fixes.md  2026-03-30-simple-advanced-modes.md  2026-03-30-tool-execution-engine.md  2026-03-31-security-audit-7-findings.md  2026-03-31-security-audit-fixes.md  2026-03-31-security-audit-full-report.md
docs/superpowers/specs/: 2026-03-30-batch-orchestration-engine-design.md  2026-03-30-tool-execution-engine-design.md
fixtures/anthropic/: claude_code_tool_result.json  claude_code_tool_use.json  error_invalid_request.json  error_rate_limit.json  messages_basic.json  messages_oversized_request.json  messages_tool_use.json
fixtures/gemini/: error_400.json  error_429.json  generate_content_basic.json  generate_content_tool_call.json
fixtures/openai/: chat_completion_basic.json  chat_completion_malformed.json  chat_completion_tool_call.json  claude_code_tool_call.json  error_401.json  error_429.json  error_500.json
scripts/: condense-openapi.py
scripts/ralph/: .last-branch
specs/001-litellm-parity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-litellm-parity/checklists/: requirements.md
specs/001-litellm-parity/contracts/: audio-image-api.md  batch-api.md  budget-rbac-api.md  cache-headers.md  cost-tracking-api.md
specs/20260325-120000-litellm-gap-fill/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260325-120000-litellm-gap-fill/contracts/: admin-keys.md  chat-completions.md
tasks/: prd-anthropic-domain-types.md  prd-compatibility-endpoints.md  prd-end-to-end-validation.md  prd-files-document-blocks.md  prd-hardening-security-observability.md  prd-non-streaming-translation.md  prd-openai-domain-types.md  prd-project-scaffolding.md  prd-proxy-server-routing.md  prd-streaming-sse-translation.md  prd-tool-calling-translation.md
