[package]
name = "anyllm_batch_engine"
description = "Batch orchestration engine with job queue, workers, and event-driven notifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyllm_translate = { path = "../translator", version = "0.2.0" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
url = "2"
hmac = "0.12"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
