[package]
name = "anthropic_openai_proxy"
description = "HTTP proxy translating Anthropic Messages API to OpenAI Chat Completions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anthropic_openai_translate = { path = "../translator" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["limit"] }
url = "2"
tracing = "0.1"
tiktoken-rs = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
