[package]
name = "anyllm_proxy"
description = "HTTP proxy translating Anthropic Messages API to OpenAI Chat Completions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyllm_translate = { path = "../translator" }
anyllm_client = { path = "../client" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
tower = "0.5"
url = "2"
tracing = "0.1"
tiktoken-rs = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
toml = "1.0.7"
indexmap = { version = "2.13.0", features = ["serde"] }
bytes = "1.11.1"
subtle = "2"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
httpdate = "1"

[dev-dependencies]
pretty_assertions = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
