[package]
name = "anyllm_proxy"
description = "HTTP proxy translating Anthropic Messages API to OpenAI Chat Completions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyllm_translate = { path = "../translator", version = "0.1.0" }
anyllm_client = { path = "../client", version = "0.2.0" }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls", "http2", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
tower = "0.5"
url = "2"
tracing = "0.1"
tiktoken-rs = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
toml = "1.0.7"
indexmap = { version = "2.13.0", features = ["serde"] }
bytes = "1.11.1"
subtle = "2"
sha2 = "0.10"
hmac = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
httpdate = "1"
dashmap = "6"
aws-sigv4 = { version = "1.4", features = ["sign-http"] }
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1"
base64 = "0.22"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
serde_yaml = "0.9"
jsonwebtoken = "10"
ipnetwork = "0.20"
zeroize = "1"

[features]
redis = ["dep:redis"]
qdrant = ["dep:qdrant-client"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[dependencies.opentelemetry]
version = "0.31"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.31"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.31"
default-features = false
features = ["trace", "http-proto", "reqwest-client"]
optional = true

[dependencies.tracing-opentelemetry]
version = "0.32"
optional = true

[dependencies.redis]
version = "0.27"
features = ["tokio-comp", "connection-manager"]
optional = true

[dependencies.qdrant-client]
version = "1"
optional = true

[dev-dependencies]
pretty_assertions = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
