[package]
name = "anthropic_openai_translate"
description = "Pure translation layer between Anthropic Messages API and OpenAI Chat Completions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
